@@ -167,6 +167,7 @@ Trunk (unreleased changes)
    HBASE-719   Find out why users have network problems in HBase and not in Hadoop
                and HConnectionManager (Jean-Daniel Cryans via Stack)
    HBASE-703   Invalid regions listed by regionserver.jsp (Izaak Rubin via Stack)
+   HBASE-674   Memcache size unreliable
    
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
